# FMCL-Server

./: .gitmodules  Dockerfile  NGC_API_key.txt  error.txt
Step1. root/: Dockerfile
Step1. user/: Dockerfile
Step2. user/: Dockerfile
Step3. zsh/: Dockerfile
docker-compose/: docker-compose.yml
homebrew/: Dockerfile
user/: Dockerfile
webcam/: pyproject.toml  server.py  webcam.py  webcam_flask.py  webcam_v2.py
